--- a/src/pages/ErrorBoundary/Errorpage.css
+++ b/src/pages/ErrorBoundary/Errorpage.css
@@ -4,11 +4,11 @@
     -webkit-text-size-adjust: none;
   }
   
-  html, body {
+  /* html, body {
     height: 100%;
-    overflow: hidden;
+    overflow: auto;
   }
-  
+   */
   body {
     padding: 0;
     margin: 0;
